pkg/test/datasets/validation/dataset/networking-v1alpha3-Gateway.yaml
# Routes TCP traffic through the ingressgateway Gateway to service A.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: valid-gateway
spec:
  selector:
    # DO NOT CHANGE THESE LABELS
    # The ingressgateway is defined in install/kubernetes/helm/istio/values.yaml
    # with these labels
    istio: ingressgateway
  servers:
    - port:
        number: 31400
        protocol: TCP
        name: tcp
      hosts:
        - a.istio-system.svc.cluster.local
